plugins {
    id 'java'
    id "org.sonarqube" version "4.0.0.2929"
    id "uk.co.boothen.gradle.wsimport" version "0.21"
    id 'org.springframework.boot' version "3.2.1"
    id 'io.spring.dependency-management' version "1.1.4"
    id "jacoco"
    id("org.openrewrite.rewrite") version("6.6.4")
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

sonarqube {
    properties {
        property "sonar.coverage.jacoco.xmlReportPaths", "${project.layout.buildDirectory}/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.dynamicAnalysis", "reuseReports"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.java.coveragePlugin", "jacoco"
        property "sonar.language", "java"
        property "sonar.token", System.getenv("SONAR_TOKEN")
        property "sonar.organization", "navikt"
        property "sonar.project.monorepo.enabled", true
        property "sonar.projectKey", "brreg-stub"
        property "sonar.projectName", "brreg-stub"
        property "sonar.sourceEncoding", "UTF-8"
    }
}

rewrite {
    activeRecipe("org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_2")
}


dependencyManagement {
    applyMavenExclusions = false
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2023.0.0'

    }
}

bootJar {
    archiveFileName = "app.jar"
}

wsimport {
    wsdl("Grunndata.wsdl") {
        packageName("no.nav.brregstub.tjenestekontrakter.ws")
    }
}


repositories {
    mavenCentral()
    maven { url "https://github-package-registry-mirror.gc.nav.no/cached/maven-release" }
    maven { url "https://build.shibboleth.net/maven/releases/" }
    mavenLocal()
}

dependencies {

    rewrite("org.openrewrite.recipe:rewrite-spring:5.2.0")

    implementation("io.dropwizard:dropwizard-jackson:4.0.2") {
        exclude group: "com.google.code.findbugs"
    }

    implementation 'no.nav.testnav.libs:database'
    implementation 'no.nav.testnav.libs:servlet-core'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
    implementation 'org.springframework.cloud:spring-cloud-vault-config-databases'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    implementation 'io.micrometer:micrometer-registry-prometheus'


    implementation 'org.apache.cxf:cxf-rt-bindings-soap'
    implementation 'org.apache.cxf:cxf-rt-ws-policy'
    implementation 'org.apache.cxf:cxf-core'
    implementation 'org.apache.cxf:cxf-rt-frontend-jaxws'
    implementation 'org.apache.cxf:cxf-rt-transports-http'
    implementation 'org.apache.cxf:cxf-rt-ws-security'
    implementation 'jakarta.servlet:jakarta.servlet-api'

    implementation 'org.postgresql:postgresql'
    implementation 'com.zaxxer:HikariCP'

    implementation 'org.flywaydb:flyway-core'
    implementation 'com.h2database:h2'

    implementation 'wsdl4j:wsdl4j'
    jaxWsTools "com.sun.xml.ws:jaxws-rt:2.3.7"
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    implementation 'io.swagger.core.v3:swagger-annotations-jakarta:2.2.20'

    implementation 'no.nav.common:auth'
    implementation 'no.nav.common:util'
    implementation 'no.nav.common:cxf:3.2023.10.17_06.55-4e30d96bba05'

    implementation 'com.h2database:h2'
    implementation "com.sun.xml.ws:jaxws-rt:4.0.2"
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    implementation 'jakarta.jws:jakarta.jws-api:3.0.0' //TODO upgrade to JUnit5
    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation "org.junit.jupiter:junit-jupiter:5.10.1"
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
